--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
   background: linear-gradient(
    to bottom, 
     floralwhite 35%,
-    #C8EFFF 95%
+    #BFE9FE 95%
   );
 }
 /* Link Styles */
@@ -44,7 +44,7 @@ a:hover {
 
 /* Section Styles */
 
-.main-nav {
+nav {
   width: 100%;
   background: linear-gradient(
     to bottom,
@@ -149,7 +149,7 @@ header .profile-image:hover {
 .tag.location {
   font-size: 2em;
 }
-.card {
+ section {
   margin: 30px;
   padding: 20px 40px 40px;
   max-width: 500px;
@@ -160,19 +160,19 @@ header .profile-image:hover {
   border: 2px dashed skyblue;
 }
 
-.card:hover {
+section:hover {
   border-color: lightskyblue;
   border-width: .2em;
 }
 
-.hobbies-container .card {
+.hobbies-container section {
   max-width: 760px;
   background-image: linear-gradient(245deg, transparent 2.5%, floralwhite 99%), url(images/travelling-photo.jpg);
   border: transparent;
   text-shadow: 1px 1px .9px #fff;
 }
 
-.my-liking-container .card {
+.my-liking-container section {
   max-width: 760px;
   background-image: linear-gradient(275deg, transparent 2.5%, floralwhite 99%), url(images/favorite-photo.jpg);
   border: transparent;
